--- a/backend_microservices/category-service/pom.xml
+++ b/backend_microservices/category-service/pom.xml
@@ -108,6 +108,16 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>jib-maven-plugin</artifactId>
+				<version>3.4.5</version>
+				<configuration>
+					<to>
+						<image>ritikdevcode/salon-category-service:v1</image>
+					</to>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
